Initial Section blocking for Article

--- a/index.html
+++ b/index.html
@@ -7,5 +7,26 @@
     <script src="main.js" defer></script>
   </head>
   <body>
+    <div class = "container">
+      <div class = "header">
+        <h1>Title of the article</h1>
+      </div>
+      <div class = "Section1">
+        <h2>Section 1</h2>
+        <p>Content of section 1</p>
+      </div>
+      <div class = "Section2">
+        <h2>Section 2</h2>
+        <p>Content of section 2</p>
+      </div>
+      <div class = "Section3">
+        <h2>Section 3</h2>
+        <p>Content of section 3</p>
+      </div>
+      <div class = "Section4">
+        <h2>Section 4</h2>
+        <p>Content of section 4</p> 
+
+      </div>
   </body>
 </html>
