--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <body>
     <div class = "container">
       <div class = "header">
+        <img src="Screenshot 2025-02-18 at 3.47.11 PM.png" alt="logo" class="header-image">
         <h1>Title of the article</h1>
       </div>
       <div class = "Section1">
