New sections, centering text

--- a/index.html
+++ b/index.html
@@ -7,27 +7,34 @@
     <script src="main.js" defer></script>
   </head>
   <body>
-    <div class = "container">
-      <div class = "header">
-        <img src="Screenshot 2025-02-18 at 3.47.11 PM.png" alt="logo" class="header-image">
-        <h1>Title of the article</h1>
+    <body>
+      <img class= header-image src="Screenshot 2025-02-18 at 3.47.11 PM.png" alt="Header Image">
+      <div class="section section-1">
+          <div class="content">
+              <h2>First Section</h2>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris.</p>
+          </div>
       </div>
-      <div class = "Section1">
-        <h2>Section 1</h2>
-        <p>Content of section 1</p>
+  
+      <div class="section section-2">
+          <div class="content">
+              <h2>Second Section</h2>
+              <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident.</p>
+          </div>
       </div>
-      <div class = "Section2">
-        <h2>Section 2</h2>
-        <p>Content of section 2</p>
+  
+      <div class="section section-3">
+          <div class="content">
+              <h2>Third Section</h2>
+              <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis.</p>
+          </div>
       </div>
-      <div class = "Section3">
-        <h2>Section 3</h2>
-        <p>Content of section 3</p>
-      </div>
-      <div class = "Section4">
-        <h2>Section 4</h2>
-        <p>Content of section 4</p> 
-
+  
+      <div class="section section-4">
+          <div class="content">
+              <h2>Fourth Section</h2>
+              <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias.</p>
+          </div>
       </div>
   </body>
 </html>
