--- a/index.html
+++ b/index.html
@@ -12,28 +12,28 @@
       <div class="section section-1">
           <div class="content">
               <h2>First Section</h2>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris.</p>
+              <p>Opening section of the article will be written here. lots more words and a longer paragraph bla bla blah fjsn fdufb skdhb</p>
           </div>
       </div>
   
       <div class="section section-2">
           <div class="content">
               <h2>Second Section</h2>
-              <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident.</p>
+              <p>Oh wow whats this? The second section of the article. Could have a different background color or  be divided by images etc.</p>
           </div>
       </div>
   
       <div class="section section-3">
           <div class="content">
               <h2>Third Section</h2>
-              <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis.</p>
+              <p>Yet another section! so super cool that there is now a third section. wow wow wow wow wow wow wow wow wow wow.</p>
           </div>
       </div>
   
       <div class="section section-4">
           <div class="content">
               <h2>Fourth Section</h2>
-              <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias.</p>
+              <p>Now a fourth section. NO WAY! no one could have predicted that one. not at all. fhbfvhbfi dfh hfiref hrufh qir.</p>
           </div>
       </div>
   </body>
