header video, headline, section images

--- a/index.html
+++ b/index.html
@@ -8,33 +8,57 @@
   </head>
   <body>
     <body>
-      <img class= header-image src="Screenshot 2025-02-18 at 3.47.11 PM.png" alt="Header Image">
-      <div class="section section-1">
-          <div class="content">
-              <h2>First Section</h2>
-              <p>Opening section of the article will be written here. lots more words and a longer paragraph bla bla blah fjsn fdufb skdhb</p>
+      <video class= video-container src="clarionBW-5.mp4" autoplay loop muted></video>
+      <div class="headline-container">
+        <h1>San Francisco’s public-facing art: A legacy of protest, community and resistance
+        </h1>
+        <p>By: Libby Raymond, Eleni Tecos, Eliza Tucker</p>
+    </div>
+    <div class="section section-1">
+        <div class="content image-right">
+            <div class="text-content">
+                <h2>First Section</h2>
+                <p>Opening section of the article will be written here. lots more words and a longer paragraph bla bla blah fjsn fdufb skdhb</p>
+            </div>
+            <div class="image-container">
+              <img src="MuralPics-02.jpg" alt="First section image">
           </div>
       </div>
   
       <div class="section section-2">
-          <div class="content">
-              <h2>Second Section</h2>
-              <p>Oh wow whats this? The second section of the article. Could have a different background color or  be divided by images etc.</p>
-          </div>
+        <div class="content image-left">
+            <div class="text-content">
+                <h2>Second Section</h2>
+                <p>Oh wow whats this? The second section of the article. Could have a different background color or be divided by images etc.</p>
+            </div>
+            <div class="image-container">
+              <img src="MuralPics-03.jpg" alt="Second section image">
+            </div>
       </div>
   
       <div class="section section-3">
-          <div class="content">
-              <h2>Third Section</h2>
-              <p>Yet another section! so super cool that there is now a third section. wow wow wow wow wow wow wow wow wow wow.</p>
-          </div>
+        <div class="content image-right">
+            <div class="text-content">
+                <h2>Third Section</h2>
+                <p>Yet another section! so super cool that there is now a third section. wow wow wow wow wow wow wow wow wow wow.</p>
+            </div>
+            <div class="image-container">
+                <img src="MuralPics-01.jpg" alt="Third section image">
+            </div>
+        </div>
+    </div>
+            </div>
       </div>
   
       <div class="section section-4">
-          <div class="content">
-              <h2>Fourth Section</h2>
-              <p>Now a fourth section. NO WAY! no one could have predicted that one. not at all. fhbfvhbfi dfh hfiref hrufh qir.</p>
-          </div>
+        <div class="content image-left">
+            <div class="text-content">
+                <h2>Fourth Section</h2>
+                <p>Now a fourth section. NO WAY! no one could have predicted that one. not at all. fhbfvhbfi dfh hfiref hrufh qir.</p>
+            </div>
+            <div class="image-container">
+              <img src="MuralPics-04.jpg" alt="Fourth section image">
+            </div>
       </div>
   </body>
 </html>
