--- a/index.html
+++ b/index.html
@@ -9,13 +9,18 @@
   <body>
     <body>
       <video class= video-container src="clarionBW-5.mp4" autoplay loop muted></video>
+
+      <div class="content-wrapper">
       <div class="headline-container">
         <h1>San Francisco’s public-facing art: A legacy of protest, community and resistance
         </h1>
         <p>By: Libby Raymond, Eleni Tecos, Eliza Tucker</p>
-    </div>
+      </div>
+      <div class="section section-1">
+        <div class="content">
+          </div>
     <div class="section section-1">
-        <div class="content image-right">
+        <div class="content">
             <div class="text-content">
                 <h2>First Subheading</h2>
                 <p>Stepping into the heart of San Francisco’s Mission District, one can not help but notice the murals lining the streets. Some sun-faded and battered by years of weather, 
@@ -23,11 +28,12 @@
             </div>
             <div class="image-container">
               <img src="MuralPics-02.jpg" alt="First section image">
+              
           </div>
       </div>
   
       <div class="section section-2">
-        <div class="content image-left">
+        <div class="content">
             <div class="text-content">
                 <p>Public-facing arts — murals, mosaics and other works on the streets and buildings of San Francisco — have long served as a canvas for political expression, beginning in the 1970s 
                     with immigrant communities protesting U.S. involvement in Central America by painting community murals in the Mission District. Today, public-facing arts continue to address injustice, with many artists calling attention to the genocide in Gaza. From the Mission District’s earliest 
@@ -44,7 +50,7 @@
       </div>
   
       <div class="section section-3">
-        <div class="content image-right">
+        <div class="content">
             <div class="text-content">
                 <h2>Second Subheading</h2>
                 <p>The murals of the Mission have a rich history dating back to the 1970s, when the first pieces began popping up in Balmy Alley – regarded by long-time muralist and Precita Eyes tour guide Patricia Rose as the original mural alley that has gone on to inspire countless others. Many of the earliest murals addressed political strife in Central American countries, as civil wars in El Salvador, Guatemala and Nicaragua prompted people to immigrate to San Francisco. Each minute detail of the murals in Balmy Alley serves as a reminder of a collective history of repression and retaliation that refuses to be forgotten.
@@ -56,7 +62,7 @@
         </div>
   
       <div class="section section-4">
-        <div class="content image-left">
+        <div class="content">
             <div class="text-content">
                 <p>“I’ve been doing this for, I don’t know, 50 years or more. And, unfortunately, these issues don’t seem to go away,” said Juana Alicia, a long-time artist and activist instrumental in the Chicano Art Movement and most known for her Las Lechugueras, Ceasefire/Alto Al Fuego and MAESTRAPEACE.
                 </p>
@@ -69,8 +75,9 @@
               <img src="MuralPics-04.jpg" alt="Fourth section image">
             </div>
       </div>
+
       <div class="section section-1">
-        <div class="content image-right">
+        <div class="content">
             <div class="text-content">
                 <h2>Third Subheading</h2>
                 <p>Public-facing arts continue to act as powerful tools of protest, with shifting — yet still urgent —themes. Recently, San Francisco has hosted a new wave of art that challenges the ongoing genocide in Gaza. 
@@ -85,8 +92,9 @@
               <img src="MuralPics-05.jpg" alt="Fifth section image">
             </div>
       </div>
+
       <div class="section section-2">
-        <div class="content image-left">
+        <div class="content">
             <div class="text-content">
                 <h2>Fourth Subheading</h2>
                 <p>“We are doing the very most that we possibly can, and it is still the least that we can do,” said Dottie Lux, an activist and artist who recently curated a multi-sensory exhibit transforming art into essential funds for families in Gaza.
@@ -98,8 +106,9 @@
               <img src="MuralPics-06.jpg" alt="Sixth section image">
             </div>
         </div>
+
         <div class="section section-3">
-            <div class="content image-right">
+            <div class="content">
                 <div class="text-content">
                     <p>San Francisco, a city known for its convergence of outspoken political activism and vibrant arts, continues to push the boundaries of the conventional through its public-facing arts. Yet, the tension between artistic expression and political protest remains a thin line.
                     </p>
@@ -110,9 +119,10 @@
                         “San Francisco is not tearing down anti-Zionist work or anything like that, but they’re going in the back door…to promote art that is more digestible,” Lux said
                     </p>
                 </div>
-                </div>
+            </div>
+
          <div class="section section-4">
-            <div class="content image-left">
+            <div class="content">
                 <div class="text-content">
                     <p>Despite these challenges, the power of public-facing art to express a range of sentiments, from dissent to appreciation, is undeniable. In the Mission, where murals have long served as an outlet for expression, art still speaks loudly–about hope, about history and about change. One such mural in the Mission depicts two hands coming together—an image of unity and strength. 
                     </p>
@@ -123,14 +133,14 @@
                     <img src="MuralPics-07.jpg" alt="Seventh section image">
                 </div>
             </div>
+
         <div class="section section-1">
-            <div class="content image-right">
+            <div class="content">
                 <div class="text-content">
                     <p>“The biggest element in the mural is the two hands because those are the tools we all get to get started with,” Rose said. “We get one on the end of each arm, but to really change the world, everybody has to work toward it, so we have a group of people in the center to remind us of that.”
                         </p>
                     <p>
-                        The mural’s message is clear: the work is far from finished, and the fight for justice will continue through the help of community. Public-facing art will remain a crucial element of that fight, unflinching in its call for change.
-
-
+                        The mural’s message is clear: the work is far from finished, and the fight for justice will continue through the help of community. Public-facing art will remain a crucial element of that fight, unflinching in its call for change. </p>
+                </div>
 </body>
 </html>
